--- a/piano_lib/templates/includes/footer.html
+++ b/piano_lib/templates/includes/footer.html
@@ -1,3 +1,3 @@
 <div class="border-top text-center py-3">
-  <p>© {% now "Y" %} <span style="color:red">I</span>rin-<span style="color:red">B</span>aro</p>    
+  <p>{% now "Y" %} <span style="color:red">I</span>rin-<span style="color:red">B</span>aro</p>    
 </div>
