--- a/piano_lib/templates/songs/category_list.html
+++ b/piano_lib/templates/songs/category_list.html
@@ -7,7 +7,7 @@
 {% block content %}
 <h1>{{ category.category_title }}</h1>
 <p>{{ category.description}}</p>
-  {% for song in songs %}
+  {% for song in page_obj %}
     {% include 'songs/includes/article.html' %}
     {% if not forloop.last %}<hr>{% endif %}
   {% endfor %}
