--- a/piano_lib/templates/songs/favorites.html
+++ b/piano_lib/templates/songs/favorites.html
@@ -1,18 +1,14 @@
 {% extends 'base.html' %}
-{% load cache %}
 
 {% block title %}
-  Главная
+  Последние обновления на сайте
 {% endblock %}
 
 {% block content %}
-  {% include 'songs/includes/switcher.html' with index=True %}
-  <h1>Главная</h1>
-  {% cache 20 article page_obj.number %}
+{% include 'songs/includes/switcher.html' with favorites=True %}
     {% for song in page_obj %}
       {% include 'songs/includes/article.html' %}
       {% if not forloop.last %}<hr>{% endif %}
     {% endfor %}
-    {% include 'songs/includes/paginator.html' %}
-  {% endcache %}
+  {% include 'songs/includes/paginator.html' %}
 {% endblock %}
