--- a/piano_lib/templates/songs/song_detail.html
+++ b/piano_lib/templates/songs/song_detail.html
@@ -21,7 +21,7 @@
 
         {% if song.category and not category %}  
         <li class="list-group-item">
-          Группа: 
+          Категория: 
           <a href="{% url 'songs:category_list' song.category.slug %}">
             {{ song.category.category_title }}
           </a>
@@ -29,7 +29,7 @@
         {% endif %}
 
         <li class="list-group-item d-flex justify-content-between align-items-center">
-          Всего постов автора: {{ song.author.songs.count }}
+          Всего песен автора: {{ song.author.songs.count }}
         </li>
         <li class="list-group-item">
           <a href="{% url 'songs:profile' song.author_id %}">
@@ -41,9 +41,9 @@
 
     <article class="col-12 col-md-9">
       <h3>{{ song.song_title }}</h3>
-      <p>{{ song.song_file }}</p>
+      <p>{{ song.description }}</p>
 
-      Скачать PDF: <a href="song.song_file">
+      Скачать PDF: <a href="{% url 'songs:song_download' song.id %}">
         {{ song.song_title }}
       </a>
         
