--- a/piano_lib/templates/songs/includes/song_counters.html
+++ b/piano_lib/templates/songs/includes/song_counters.html
@@ -3,23 +3,8 @@
     <div class="btn-group text-muted  btn-sm "> 
       <div class="d-flex justify-content-between align-items-center mb-3 ml-2">
          
-        <div class="btn-group text-muted  btn-sm">
-          {% if song_detail %}
-            {% if is_liked %}
-              <a class="nav-link" href="{% url 'songs:song_dislike' song.author.author_name song.id %}" role='button'>
-                ❤️{{ song.like.count }} {% if likes.number == 0 or None %} 0 {% endif %}
-              </a>
-            {% else %}
-              <a class="nav-link" href="{% url 'songs:song_like' song.author song.id %}" role='button'>
-                🤍{{ song.like.count }} {% if likes.number == 0 or None %} 0 {% endif %}
-              </a>
-              {% endif %}
-          {% else %}
-            <div class="btn-group text-muted  btn-sm ">
-              💕 {{ song.like.count }} {% if likes.number == 0 or None %} 0 {% endif %}
-            </div>
-          {% endif %}
-        </div>
+          {% include 'songs/includes/likes/song_likes.html' %}
+        
 
         <div class="d-flex justify-content-between align-items-right mr-2">
           <div class="btn-group text-muted  btn-sm ">Просмотров: {{ song.count_views }}</div>
