--- a/piano_lib/templates/includes/header.html
+++ b/piano_lib/templates/includes/header.html
@@ -11,29 +11,41 @@
     <ul class="nav nav-pills">
       <li class="nav-item"> 
         <a class="nav-link {% if view_name  == 'about:author' %}active{% endif %}" 
-        href="{% url 'about:author' %}">Об авторе</a>
+        href="{% url 'about:author' %}">Обо мне</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link {% if view_name  == 'about:tech' %}active{% endif %}"
-        href="{% url 'about:tech' %}">Технологии</a>
+        <a class="nav-link {% if authors_all_url %}active{% endif %}"
+        href="{% url 'songs:authors_all' %}">Все авторы</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link {% if category_all_url %}active{% endif %}"
+        href="{% url 'songs:category_all' %}">Все категории</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link {% if songs_all_url %}active{% endif %}"
+        href="{% url 'songs:songs_all' %}">Все песни</a>
       </li>
     
     {% if request.user.is_authenticated %}
       <li class="nav-item"> 
-        <a class="nav-link link-light {% if view_name  == 'users:password_change' %}active{% endif %}" href="{% url 'users:password_change' %}">Изменить пароль</a>
+        <a class="nav-link link-light {% if view_name  == 'users:password_change' %}active{% endif %}"
+        href="{% url 'users:password_change' %}">Изменить пароль</a>
       </li>
       <li class="nav-item"> 
-        <a class="nav-link link-light {% if view_name  == 'users:logout' %}active{% endif %}" href="{% url 'users:logout' %}">Выйти</a>
+        <a class="nav-link link-light {% if view_name  == 'users:logout' %}active{% endif %}"
+        href="{% url 'users:logout' %}">Выйти</a>
       </li>
       <li>
         Пользователь: {{ user.username }}
       </li>
       {% else %}
       <li class="nav-item"> 
-        <a class="nav-link link-light {% if view_name  == 'users:login' %}active{% endif %}" href="{% url 'users:login' %}">Войти</a>
+        <a class="nav-link link-light {% if view_name  == 'users:login' %}active{% endif %}"
+        href="{% url 'users:login' %}">Войти</a>
       </li>
       <li class="nav-item"> 
-        <a class="nav-link link-light {% if view_name  == 'users:signup' %}active{% endif %}" href="{% url 'users:signup' %}">Регистрация</a>
+        <a class="nav-link link-light {% if view_name  == 'users:signup' %}active{% endif %}"
+        href="{% url 'users:signup' %}">Регистрация</a>
       </li>
       {% endif %}
     </ul>
