--- a/piano_lib/templates/songs/includes/article.html
+++ b/piano_lib/templates/songs/includes/article.html
@@ -1,24 +1,32 @@
 <article>
   <div class="shadow-sm p-3 bg-white">
   <ul>
+
+
     {% if not profile %}
     <li>
       Автор: <b>{{ song.author.get_full_name }}</b>
       <a href="{% url 'songs:profile' song.author_id %}">{{ song.author }}</a>
     </li>
     {% endif %}
-    <li>
+    <!--li>
       Дата публикации: {{ song.pub_date|date:"d E Y" }}
-    </li>
-    {% if song.category %} 
-      <li> 
-        Категория: 
-      <a href="{% url 'songs:category_list' song.category.slug %}">{{ song.category.category_title }}</a>
-      </li>
+    </li-->
+
+    {% if song.categories.exists and not category %}
+    <li>
+      Категория: 
+      <ul>
+        {% for category in song.categories.all %}
+        <li><a href="{% url 'songs:category_list' category.slug %}">
+              {{ category.category_title }}
+            </a></li>
+        {% endfor %}
+      </ul>
     {% endif %}
   </ul>
 
-  <p>{{ song.song_title }}</p>
+  <strong>{{ song.song_title }}</strong>
   <a href="{% url 'songs:song_detail' song.id %}">подробнее</a>
  
   {% include 'songs/includes/song_counters.html' %}
