--- a/piano_lib/templates/songs/songs_all.html
+++ b/piano_lib/templates/songs/songs_all.html
@@ -3,7 +3,7 @@
 {% block title %}Все категории{% endblock %}
 
 {% block content %}
-  <h1>Все категории</h1>
+  <h1>Все песни</h1>
   <p>
     {% for song in songs %} 
     <a href="{% url 'songs:song_detail' song.id %}">{{ song.song_title }}</a>
