--- a/piano_lib/templates/includes/header.html
+++ b/piano_lib/templates/includes/header.html
@@ -3,8 +3,8 @@
 <nav class="navbar navbar-light" style="background-color: lightskyblue">
   <div class="container">
     <a class="navbar-brand" href="{% url 'posts:index' %}">
-      <img src="{% static 'img/logo.png' %}" width="30" height="30" class="d-inline-block align-top" alt="">
-      <span style="color:red">I</span>rin-<span style="color:red">B</span>aro
+      <!--img src="{% static 'img/logo.png' %}" width="30" height="30" class="d-inline-block align-top" alt=""-->
+      <span style="color:blue">A</span>nna<span style="color:blue">P</span>iano</p>
     </a>
 
    {% with request.resolver_match.view_name as view_name %}
