--- a/piano_lib/templates/songs/includes/image.html
+++ b/piano_lib/templates/songs/includes/image.html
@@ -1,5 +1,11 @@
 {% load thumbnail %}
 
-{% thumbnail author.image "960x500" crop="center" upscale=True as im %}
-  <img class="card-img my-2" src="{{ im.url }}">
-{% endthumbnail %}
+{% if profile %}
+  {% thumbnail author.image "960x500" crop="center" upscale=True as im %}
+    <img class="card-img my-2" src="{{ im.url }}">
+  {% endthumbnail %}
+{% else %}
+  {% thumbnail song.image "960x339" crop="center" upscale=True as im %}
+    <img class="card-img my-2" src="{{ im.url }}">
+  {% endthumbnail %}
+{% endif %}
